--- a/config_sct_run_batch.yml
+++ b/config_sct_run_batch.yml
@@ -4,6 +4,7 @@ path_output: /scratch/sabeda/ukbiobank_results
 script: /home/sabeda/ukbiobank-spinalcord-csa/process_data.sh
 script_args: $PATH_GRADCORR_FILE
 jobs: -1
+batch_log: sct_run_batch_log.txt
 continue_on_error: 1
 subject_prefix: sub-
 zip: true
