--- a/config_sct_run_batch.yml
+++ b/config_sct_run_batch.yml
@@ -1,5 +1,5 @@
-# config file for sct_run_batch
-path_data: /scratch/sabeda/???
+# config file for sct_run_batch for run_all.py script
+path_data: /scratch/sabeda/uk-biobank
 path_output: /scratch/sabeda/ukbiobank_results
 script: /home/sabeda/ukbiobank-spinalcord-csa/process_data.sh
 script_args: $PATH_GRADCORR_FILE
