add sub to exclude

--- a/exclude.yml
+++ b/exclude.yml
@@ -1,2 +1,3 @@
 - sub-1005491_T2w.nii.gz  # Don't see C2-3 disc, image tilted
+- sub-1011687_T2w.nii.gz  # Shading arround C2-C3, can't see SC
 - sub-1024269_T1w.nii.gz  # sc is blured and FOV cuts at C2-C3 disc
