--- a/exclude.yml
+++ b/exclude.yml
@@ -1,3 +1,5 @@
 - sub-1005491_T2w.nii.gz  # Don't see C2-3 disc, image tilted
 - sub-1011687_T2w.nii.gz  # Shading arround C2-C3, can't see SC
+- sub-1016730_T2w.nii.gz  # Shading arround C2-C3, can't see SC
+- sub-1017825_T2w.nii.gz  # Shading, can't see SC , image tiled
 - sub-1024269_T1w.nii.gz  # sc is blured and FOV cuts at C2-C3 disc
