--- a/exclude.yml
+++ b/exclude.yml
@@ -2,5 +2,28 @@
 - sub-1011687_T2w.nii.gz  # Shading arround C2-C3, can't see SC
 - sub-1016730_T2w.nii.gz  # Shading arround C2-C3, can't see SC
 - sub-1017825_T2w.nii.gz  # Shading, can't see SC , image tiled
-- sub-1024269_T1w.nii.gz  # sc is blured and FOV cuts at C2-C3 disc
+- sub-1024269_T1w.nii.gz  # SC is blured and FOV cuts at C2-C3 disc
 - sub-1012113_T1w.nii.gz  # FOV cuts before C2-C3 disc
+- sub-1026594_T2w.nii.gz  # No contrast arround SC at C2-C3
+- sub-1027132_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1027567_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1029324_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1029729_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1029993_T2w.nii.gz  # Image tilted + shading, don't see SC + disc
+- sub-1030519_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1031426_T1w.nii.gz  # Motion artifact
+- sub-1031426_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1031952_T2w.nii.gz  # Image tilted + shading, don't see SC + disc
+- sub-1035680_T2w.nii.gz  # Shading at C2-C3
+- sub-1035863_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1036337_T2w.nii.gz  # FOV cuts SC
+- sub-1036523_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1036748_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1038735_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1039751_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1040099_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1040988_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1041624_T2w.nii.gz  # Shading of SC, don't see SC + disc
+- sub-1045181_T2w.nii.gz  # Shading + poor data quality
+- sub-1046534_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1047654_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
