--- a/exclude.yml
+++ b/exclude.yml
@@ -52,14 +52,18 @@
 - sub-1048407_T1w.nii.gz  # Poor data quality
 - sub-1048812_T1w.nii.gz  # Motion artefact
 - sub-1052029_T1w.nii.gz  # FOV cuts C2-C3 disc
+- sub-1052980_T1w.nii.gz  # Poor data quality
 - sub-1059011_T1w.nii.gz  # Motion artefact
 - sub-1067736_T1w.nii.gz  # Motion artefact
 - sub-1070818_T1w.nii.gz  # Motion artefact + poor data quality
+- sub-1077193_T1w.nii.gz  # Poor data quality + FOV cuts just below C2-3
 - sub-1078395_T1w.nii.gz  # Motion artefact
 - sub-1080952_T1w.nii.gz  # Motion artefact
 - sub-1081070_T1w.nii.gz  # Motion artefact
 - sub-1091250_T1w.nii.gz  # FOV cuts C2-C3 disc
 - sub-1094289_T1w.nii.gz  # FOV cuts C2-C3 disc
+- sub-1095748_T1w.nii.gz  # Poor data quality + motion
+- sub-1097741_T1w.nii.gz  # Poor data quality at C2-3
 - sub-1098459_T1w.nii.gz  # FOV cuts C2-C3 disc
 - sub-1102439_T1w.nii.gz  # Motion artefact  
 - sub-1113753_T1w.nii.gz  # Motion artefact
@@ -68,7 +72,10 @@
 - sub-1123856_T1w.nii.gz  # Motion artefact
 - sub-1125665_T1w.nii.gz  # Motion artefact
 - sub-1127471_T1w.nii.gz  # Motion artefact + poor data quality
+- sub-1132109_T1w.nii.gz  # Poor data quality
 - sub-1132220_T1w.nii.gz  # Motion artefact
+- sub-1132718_T1w.nii.gz  # Poor data quality
+- sub-1133024_T1w.nii.gz  # Poor data quality
 - sub-1133658_T1w.nii.gz  # Motion artefact
 - sub-1136053_T1w.nii.gz  # Motion artefact + poor data quality
 - sub-1139207_T1w.nii.gz  # Poor data quality + FOV cuts just below C2-3
@@ -76,3 +83,4 @@
 - sub-1139906_T1w.nii.gz  # Poor data quality just bellow C2-3
 - sub-1140969_T1w.nii.gz  # Poor data quality at C2-3 disc
 - sub-1141536_T1w.nii.gz  # FOV cuts C2-C3 disc
+- sub-1117152_T1w.nii.gz  # FOV cuts just below C2-3 + image tilted
