--- a/exclude.yml
+++ b/exclude.yml
@@ -16,12 +16,12 @@
 - sub-1018932_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1019867_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1021125_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
-- sub-1021191_T1w.nii.gz  # Motion artefact
+- sub-1021191_T1w.nii.gz  # Motion artifact
 - sub-1021534_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1022232_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1023062_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
-- sub-1024269_T1w.nii.gz  # Motion artefact
-- sub-1024305_T1w.nii.gz  # Motion artefact
+- sub-1024269_T1w.nii.gz  # Motion artifact
+- sub-1024305_T1w.nii.gz  # Motion artifact
 - sub-1024889_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1024269_T1w.nii.gz  # SC is blured and FOV cuts at C2-C3 disc
 - sub-1026594_T2w.nii.gz  # No contrast arround SC at C2-C3
@@ -50,33 +50,40 @@
 - sub-1046534_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1047654_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1048407_T1w.nii.gz  # Poor data quality
-- sub-1048812_T1w.nii.gz  # Motion artefact
+- sub-1048812_T1w.nii.gz  # Motion artifact
 - sub-1052980_T1w.nii.gz  # Poor data quality
 - sub-1052029_T1w.nii.gz  # FOV cuts C2-C3 disc
-- sub-1059011_T1w.nii.gz  # Motion artefact
-- sub-1067736_T1w.nii.gz  # Motion artefact
-- sub-1070818_T1w.nii.gz  # Motion artefact + poor data quality
+- sub-1059011_T1w.nii.gz  # Motion artifact
+- sub-1067736_T1w.nii.gz  # Motion artifact
+- sub-1070818_T1w.nii.gz  # Motion artifact + poor data quality
 - sub-1077193_T1w.nii.gz  # Poor data quality + FOV cuts just below C2-3
-- sub-1078395_T1w.nii.gz  # Motion artefact
-- sub-1080952_T1w.nii.gz  # Motion artefact
-- sub-1081070_T1w.nii.gz  # Motion artefact
+- sub-1078395_T1w.nii.gz  # Motion artifact
+- sub-1080952_T1w.nii.gz  # Motion artifact
+- sub-1081070_T1w.nii.gz  # Motion artifact
+- sub-1082225_T1w.nii.gz  # Motion artifact
+- sub-1089378_T1w.nii.gz  # FOV just below C2-C3
 - sub-1091250_T1w.nii.gz  # FOV cuts C2-C3 disc
 - sub-1094289_T1w.nii.gz  # FOV cuts C2-C3 disc
+- sub-1097616_T1w.nii.gz  # Motion artifact
+- sub-1097677_T1w.nii.gz  # Motion artifact
 - sub-1098459_T1w.nii.gz  # FOV cuts C2-C3 disc
-- sub-1102439_T1w.nii.gz  # Motion artefact  
-- sub-1113753_T1w.nii.gz  # Motion artefact
+- sub-1102439_T1w.nii.gz  # Motion artifact  
+- sub-1113753_T1w.nii.gz  # Motion artifact
+- sub-1114977_T1w.nii.gz  # FOV cuts C2-C3 + poor data quality
 - sub-1115141_T1w.nii.gz  # Poor data quality
-- sub-1122338_T1w.nii.gz  # Motion artefact
-- sub-1123856_T1w.nii.gz  # Motion artefact
-- sub-1125665_T1w.nii.gz  # Motion artefact
-- sub-1127471_T1w.nii.gz  # Motion artefact + poor data quality
-- sub-1132220_T1w.nii.gz  # Motion artefact
+- sub-1117152_T1w.nii.gz  # FOV cuts just below C2-3 + image tilted
+- sub-1122338_T1w.nii.gz  # Motion artifact
+- sub-1123856_T1w.nii.gz  # Motion artifact
+- sub-1125665_T1w.nii.gz  # Motion artifact
+- sub-1127471_T1w.nii.gz  # Motion artifact + poor data quality
+- sub-1132220_T1w.nii.gz  # Motion artifact
 - sub-1133024_T1w.nii.gz  # Poor data quality + motion
-- sub-1133658_T1w.nii.gz  # Motion artefact
-- sub-1136053_T1w.nii.gz  # Motion artefact + poor data quality
+- sub-1133658_T1w.nii.gz  # Motion artifact
+- sub-1134671_T1w.nii.gz  # FOV cuts just below C2-C3
+- sub-1136053_T1w.nii.gz  # Motion artifact + poor data quality
+- sub-1137171_T1w.nii.gz  # FOV cuts just below C2-C3
 - sub-1139207_T1w.nii.gz  # Poor data quality + FOV cuts just below C2-3
 - sub-1139656_T1w.nii.gz  # Poor data quality arround C2-C3
 - sub-1139906_T1w.nii.gz  # Poor data quality just bellow C2-3
 - sub-1140969_T1w.nii.gz  # Poor data quality at C2-3 disc
 - sub-1141536_T1w.nii.gz  # FOV cuts C2-C3 disc
-- sub-1117152_T1w.nii.gz  # FOV cuts just below C2-3 + image tilted
