--- a/exclude.yml
+++ b/exclude.yml
@@ -53,6 +53,7 @@
 - sub-1040099_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1040988_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1041624_T2w.nii.gz  # Shading of SC, don't see SC + disc
+- sub-1043645_T1w.nii.gz  # Motion artifact
 - sub-1045181_T2w.nii.gz  # Shading + poor data quality
 - sub-1046534_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1047654_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
