--- a/exclude.yml
+++ b/exclude.yml
@@ -1,8 +1,6 @@
 - sub-1000252_T1w.nii.gz  # Motion artifact
-- sub-1002033_T1w.nii.gz  # Motion artifact
 - sub-1002191_T1w.nii.gz  # Motion artifact
 - sub-1002702_T1w.nii.gz  # Motion artifact
-- sub-1005975_T1w.nii.gz  # Poor data quality around C2-C3
 - sub-1005491_T2w.nii.gz  # Don't see C2-3 disc, image tilted
 - sub-1006023_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc 
 - sub-1006510_T1w.nii.gz  # Motion artifact
@@ -10,7 +8,6 @@
 - sub-1007450_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1007915_T1w.nii.gz  # FOV cuts at C2-C
 - sub-1007915_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
-- sub-1010210_T1w.nii.gz  # Motion artifact
 - sub-1010982_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1011717_T1w.nii.gz  # Motion artifact
 - sub-1011687_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
@@ -20,9 +17,9 @@
 - sub-1014662_T1w.nii.gz  # Motion artifact
 - sub-1015206_T1w.nii.gz  # Motion artifact
 - sub-1015344_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
-- sub-1015849_T1w.nii.gz  # Motion artifact
 - sub-1016730_T1w.nii.gz  # Image tilted + poor contrast at C2-C3 of SC
 - sub-1016730_T2w.nii.gz  # Shading arround C2-C3, can't see SC
+- sub-1017414_T1w.nii.gz  # Motion artifact + poor data quality
 - sub-1017465_T1w.nii.gz  # Motion artifact
 - sub-1017582_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1017825_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
@@ -31,6 +28,7 @@
 - sub-1018932_T1w.nii.gz  # Poor contrast of SC arround C2-C3 + image tilted
 - sub-1018932_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1019867_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1020212_T1w.nii.gz  # Motion artifact
 - sub-1021125_T1w.nii.gz  # FOV cuts at C2-C3
 - sub-1021125_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1021191_T1w.nii.gz  # Motion artifact
@@ -39,6 +37,7 @@
 - sub-1022232_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1023062_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1023193_T1w.nii.gz  # Motion artifact
+- sub-1023659_T1w.nii.gz  # Motion artifact
 - sub-1024269_T1w.nii.gz  # Motion artifact
 - sub-1024305_T1w.nii.gz  # Motion artifact
 - sub-1024889_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
@@ -55,7 +54,6 @@
 - sub-1029993_T1w.nii.gz  # FOV cuts before C2-C3 disc
 - sub-1029993_T2w.nii.gz  # Image tilted + shading, don't see SC + disc
 - sub-1030519_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
-- sub-1030536_T1w.nii.gz  # Motion artifact
 - sub-1031426_T1w.nii.gz  # Motion artifact
 - sub-1031426_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1031952_T1w.nii.gz  # FOV cuts just below C2-C3
@@ -75,13 +73,18 @@
 - sub-1039751_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1039910_T1w.nii.gz  # Motion artifact
 - sub-1040099_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1040327_T1w.nii.gz  # Motion artifact
 - sub-1040988_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1041093_T1w.nii.gz  # Motion artifact + poor data quality
 - sub-1041624_T2w.nii.gz  # Shading of SC, don't see SC + disc
 - sub-1042975_T1w.nii.gz  # Motion artifact
+- sub-1043462_T1w.nii.gz  # Motion artifact
 - sub-1043645_T1w.nii.gz  # Motion artifact
+- sub-1043661_T1w.nii.gz  # Motion artifact
+- sub-1045124_T1w.nii.gz  # Motion artifact
 - sub-1045181_T2w.nii.gz  # Shading + poor data quality
-- sub-1046499_T1w.nii.gz  # Motion artifact
+- sub-1045575_T1w.nii.gz  # Motion artifact
+- sub-1045895_T1w.nii.gz  # Motion artifact
 - sub-1046534_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1047359_T1w.nii.gz  # Motion artifact
 - sub-1047654_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
@@ -95,6 +98,7 @@
 - sub-1052029_T1w.nii.gz  # FOV cuts C2-C3 disc
 - sub-1054623_T1w.nii.gz  # Poor data quality at C2-C3
 - sub-1055910_T1w.nii.gz  # Motion artifact
+- sub-1056865_T1w.nii.gz  # Motion artifact
 - sub-1058251_T1w.nii.gz  # Motion artifact
 - sub-1058390_T1w.nii.gz  # FOV cuts at C2-C3
 - sub-1058928_T1w.nii.gz  # Motion artifact
@@ -109,14 +113,12 @@
 - sub-1069272_T1w.nii.gz  # FOV cuts C2-C3 disc
 - sub-1069584_T1w.nii.gz  # Motion artifact
 - sub-1070818_T1w.nii.gz  # Motion artifact + poor data quality
-- sub-1072537_T1w.nii.gz  # Motion artifact
 - sub-1073057_T1w.nii.gz  # Motion artifact
 - sub-1074916_T1w.nii.gz  # Motion artifact
 - sub-1077193_T1w.nii.gz  # Poor data quality + FOV cuts just below C2-3
 - sub-1077469_T1w.nii.gz  # Motion artifact
 - sub-1078395_T1w.nii.gz  # Motion artifact
 - sub-1078726_T1w.nii.gz  # Motion artifact
-- sub-1078986_T1w.nii.gz  # Motion artifact
 - sub-1079946_T1w.nii.gz  # FOV cuts just below C2-C3 + motion artifact
 - sub-1080952_T1w.nii.gz  # Motion artifact
 - sub-1081070_T1w.nii.gz  # Motion artifact
@@ -133,28 +135,25 @@
 - sub-1096007_T1w.nii.gz  # FOV cuts C2-C3 disc
 - sub-1097616_T1w.nii.gz  # Motion artifact
 - sub-1097677_T1w.nii.gz  # Motion artifact
-- sub-1098396_T1w.nii.gz  # FOV cuts C2-C3 disc
+- sub-1097741_T1w.nii.gz  # Poor data quality around C2-C3
 - sub-1098459_T1w.nii.gz  # FOV cuts C2-C3 disc
-- sub-1100952_T1w.nii.gz  # FOV cuts just below C2-C3
 - sub-1101310_T1w.nii.gz  # Motion artifact
 - sub-1102364_T1w.nii.gz  # Motion artifact
 - sub-1102439_T1w.nii.gz  # Motion artifact
+- sub-1101532_T1w.nii.gz  # Motion artifact
 - sub-1103629_T1w.nii.gz  # FOV cuts just below C2-C3
 - sub-1106703_T1w.nii.gz  # Motion artifact
 - sub-1107534_T1w.nii.gz  # FOV cuts C2-C3 disc
-- sub-1110047_T1w.nii.gz  # Motion artifact
 - sub-1111448_T1w.nii.gz  # Poor data quality at C2-C3
 - sub-1112308_T1w.nii.gz  # Motion artifact
 - sub-1112855_T1w.nii.gz  # Motion artifact
 - sub-1112881_T1w.nii.gz  # Motion artifact
 - sub-1113167_T1w.nii.gz  # FOV cuts C2-C3 disc
-- sub-1113460_T1w.nii.gz  # Motion artifact
 - sub-1113753_T1w.nii.gz  # Motion artifact
 - sub-1114977_T1w.nii.gz  # FOV cuts C2-C3 + poor data quality
 - sub-1115141_T1w.nii.gz  # Poor data quality
 - sub-1115549_T1w.nii.gz  # Motion artifact
 - sub-1116123_T1w.nii.gz  # Motion artifact
-- sub-1117018_T1w.nii.gz  # Motion artifact
 - sub-1117152_T1w.nii.gz  # FOV cuts just below C2-3 + image tilted
 - sub-1119733_T1w.nii.gz  # Motion artifact
 - sub-1120512_T1w.nii.gz  # FOV cuts C2-C3 disc
@@ -181,7 +180,7 @@
 - sub-1136618_T1w.nii.gz  # Motion artifact
 - sub-1139207_T1w.nii.gz  # Poor data quality + FOV cuts just below C2-3
 - sub-1139656_T1w.nii.gz  # Poor data quality arround C2-C3
-- sub-1139906_T1w.nii.gz  # Poor data quality just bellow C2-3
+- sub-1139471_T1w.nii.gz  # Motion artifact
 - sub-1140271_T1w.nii.gz  # FOV cuts C2-C3 disc
 - sub-1140969_T1w.nii.gz  # Poor data quality at C2-3 disc
 - sub-1141536_T1w.nii.gz  # FOV cuts C2-C3 disc
