--- a/exclude.yml
+++ b/exclude.yml
@@ -22,6 +22,7 @@
 - sub-1017414_T1w.nii.gz  # Motion artifact + poor data quality
 - sub-1017465_T1w.nii.gz  # Motion artifact
 - sub-1017582_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1017825_T1w.nii.gz  # Motion + poor data quality
 - sub-1017825_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1018268_T1w.nii.gz  # Motion artifact
 - sub-1018786_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
@@ -70,12 +71,14 @@
 - sub-1036748_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1038735_T1w.nii.gz  # FOV cuts at C2-C3
 - sub-1038735_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1039751_T1w.nii.gz  # Poor data quality
 - sub-1039751_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1039910_T1w.nii.gz  # Motion artifact
 - sub-1040099_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1040327_T1w.nii.gz  # Motion artifact
 - sub-1040988_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1041093_T1w.nii.gz  # Motion artifact + poor data quality
+- sub-1041624_T1w.nii.gz  # FOV cuts C2-C3 disc
 - sub-1041624_T2w.nii.gz  # Shading of SC, don't see SC + disc
 - sub-1042975_T1w.nii.gz  # Motion artifact
 - sub-1043462_T1w.nii.gz  # Motion artifact
@@ -86,6 +89,7 @@
 - sub-1045575_T1w.nii.gz  # Motion artifact
 - sub-1045895_T1w.nii.gz  # Motion artifact
 - sub-1046534_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
+- sub-1046534_T1w.nii.gz  # Poor data quality around C2-C3
 - sub-1047359_T1w.nii.gz  # Motion artifact
 - sub-1047654_T2w.nii.gz  # Shading at C2-C3, don't see SC + disc
 - sub-1048407_T1w.nii.gz  # Poor data quality
